delete temp files

--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Binghan CHEN(23965953)" />
 
-<meta name="date" content="2024-10-06" />
+<meta name="date" content="2024-10-13" />
 
 <title>CITS4009 Project - Exploratory Data Analysis and Predictive Modeling</title>
 
@@ -353,11 +353,13 @@ display: none;
 <h1 class="title toc-ignore">CITS4009 Project - Exploratory Data
 Analysis and Predictive Modeling</h1>
 <h4 class="author">Binghan CHEN(23965953)</h4>
-<h4 class="date">2024-10-06</h4>
+<h4 class="date">2024-10-13</h4>
 
 </div>
 
 
+<p><a href="https://youtu.be/9IIQfb88t9U"><strong>Watch the
+Demonstration Video Here</strong></a></p>
 <div id="introduction" class="section level1">
 <h1><strong>Introduction</strong></h1>
 <p>The objective of this project is to perform exploratory data analysis
@@ -2791,12 +2793,11 @@ clustering outcomes based on selected features.</li>
 <h2><strong>4.2. Demonstration Video</strong></h2>
 <p>A short <strong>2-3 minute video</strong> demonstrates the
 functionalities of the Shiny App, highlighting its interactive features
-and how it supports exploratory data analysis. <a href="#"><strong>Watch
-the Demonstration Video Here</strong></a> <em>(Replace <code>#</code>
-with your actual YouTube link)</em></p>
-<p><strong>Note:</strong> The video includes a walkthrough of the app’s
-interface, showcasing how to navigate between tabs, interact with plots,
-and interpret the results effectively.</p>
+and how it supports exploratory data analysis. <a href="https://youtu.be/9IIQfb88t9U"><strong>Watch the Demonstration
+Video Here</strong></a></p>
+<p>The video includes a walkthrough of the app’s interface, showcasing
+how to navigate between tabs, interact with plots, and interpret the
+results effectively.</p>
 </div>
 </div>
 <div id="conclusion" class="section level1">
